Updates & Maintenence - Updated Deps - Upgraded to bitcoinjs-lib v4 - Moved main component back into /src for development - Stopped trying to fetch app list because it gives back 403 whatnot - Added the ability to get to the main component via the popup "settings" button

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "blockstack-background.js",
   "private": true,
   "dependencies": {
-    "@mdi/font": "^2.4.85",
+    "@mdi/font": "^2.5.94",
     "axios": "^0.18.0",
+    "bip32": "^1.0.2",
     "bip39": "^2.5.0",
-    "bitcoinjs-lib": "^3.3.2",
-    "blockstack": "^17.2.0",
+    "bitcoinjs-lib": "^4.0.1",
+    "blockstack": "^18.0.0",
     "buefy": "^0.6.6",
     "bulma": "^0.7.1",
     "clipboard-copy": "^2.0.0",
@@ -23,39 +24,39 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
-    "webextension-polyfill-ts": "^0.8.4",
+    "webextension-polyfill-ts": "^0.8.7",
     "zone-file": "^0.2.3"
   },
   "devDependencies": {
     "@types/bip39": "^2.4.0",
     "@types/bitcoinjs-lib": "^3.4.0",
     "@types/blockstack": "file:ext/@types/blockstack",
-    "@types/jsonwebtoken": "^7.2.7",
-    "@types/lodash": "^4.14.109",
-    "@types/node": "^10.3.3",
-    "autoprefixer": "^8.6.2",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/lodash": "^4.14.113",
+    "@types/node": "^10.5.3",
+    "autoprefixer": "^9.0.1",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
-    "fork-ts-checker-webpack-plugin": "^0.4.2",
+    "fork-ts-checker-webpack-plugin": "^0.4.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
     "sass-loader": "^7.0.3",
-    "ts-loader": "^4.4.1",
+    "ts-loader": "^4.4.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.10.0",
+    "tslint": "^5.11.0",
     "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "vue-loader": "^15.2.4",
-    "vue-style-loader": "^4.1.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "vue-loader": "^15.2.6",
+    "vue-style-loader": "^4.1.1",
     "vue-template-compiler": "^2.5.16",
-    "webextension-polyfill": "^0.2.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.7"
+    "webextension-polyfill": "^0.3.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "test": "web-ext run",
