Add recent and pinned apps, update popup/main/auth views - App Icons are now styled in a specific way to look the same - Pinned apps have been added to the popup and main - Minor changes to the main view layout (background, nav height) - Updated the popup on how to handle images and pinned vs recommended apps

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vee-validate": "^2.0.9",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "webextension-polyfill-ts": "^0.8.7",
