--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "blockstack-background.js",
   "private": true,
   "dependencies": {
-    "@mdi/font": "^2.5.94",
+    "@mdi/font": "^2.8.94",
     "axios": "^0.18.0",
     "bip32": "^1.0.2",
     "bip39": "^2.5.0",
-    "bitcoinjs-lib": "^4.0.1",
+    "bitcoinjs-lib": "^4.0.2",
     "blockstack": "^18.0.4",
-    "buefy": "^0.6.6",
-    "bulma": "^0.7.1",
-    "clipboard-copy": "^2.0.0",
+    "buefy": "^0.7.0",
+    "bulma": "^0.7.2",
+    "clipboard-copy": "^2.0.1",
     "hash-handler": "^2.0.1",
-    "jsontokens": "^0.7.8",
+    "jsontokens": "^0.8.0",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
+    "luxon": "^1.4.4",
     "qrcode-lite": "^1.2.2",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.17",
@@ -25,39 +26,40 @@
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
-    "webextension-polyfill-ts": "^0.8.7",
+    "webextension-polyfill-ts": "^0.8.9",
     "zone-file": "^0.2.3"
   },
   "devDependencies": {
     "@types/bip39": "^2.4.0",
-    "@types/bitcoinjs-lib": "^3.4.0",
+    "@types/bitcoinjs-lib": "^4.0.0",
     "@types/blockstack": "file:ext/@types/blockstack",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/lodash": "^4.14.116",
-    "@types/node": "^10.5.7",
-    "autoprefixer": "^9.1.0",
+    "@types/lodash": "^4.14.117",
+    "@types/luxon": "^1.4.0",
+    "@types/node": "^10.12.0",
+    "autoprefixer": "^9.2.1",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
-    "file-loader": "^1.1.11",
-    "fork-ts-checker-webpack-plugin": "^0.4.5",
+    "file-loader": "^2.0.0",
+    "fork-ts-checker-webpack-plugin": "^0.4.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.2",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.9.4",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "ts-loader": "^4.4.2",
+    "ts-loader": "^5.2.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "vue-loader": "^15.3.0",
-    "vue-style-loader": "^4.1.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webextension-polyfill": "^0.3.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webextension-polyfill": "^0.3.1",
+    "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "test": "web-ext run",
