--- a/package.json
+++ b/package.json
@@ -5,60 +5,62 @@
   "main": "blockstack-background.js",
   "private": true,
   "dependencies": {
-    "@mdi/font": "^2.8.94",
+    "@mdi/font": "^3.2.89",
     "axios": "^0.18.0",
     "bip32": "^1.0.2",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.2",
-    "blockstack": "^18.0.4",
-    "buefy": "^0.7.0",
+    "blockstack": "^18.1.0",
+    "buefy": "^0.7.1",
     "bulma": "^0.7.2",
     "clipboard-copy": "^2.0.1",
     "hash-handler": "^2.0.1",
     "jsontokens": "^0.8.0",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.4.4",
+    "luxon": "^1.8.2",
     "qrcode-lite": "^1.2.2",
-    "vee-validate": "^2.0.9",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuedraggable": "^2.16.0",
+    "semver": "^5.6.0",
+    "vee-validate": "^2.1.4",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
+    "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "webextension-polyfill-ts": "^0.8.9",
     "zone-file": "^0.2.3"
   },
   "devDependencies": {
-    "@types/bip39": "^2.4.0",
+    "@types/bip39": "^2.4.1",
     "@types/bitcoinjs-lib": "^4.0.0",
     "@types/blockstack": "file:ext/@types/blockstack",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/lodash": "^4.14.117",
-    "@types/luxon": "^1.4.0",
-    "@types/node": "^10.12.0",
-    "autoprefixer": "^9.2.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.4",
-    "css-loader": "^1.0.0",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/lodash": "^4.14.119",
+    "@types/luxon": "^1.4.1",
+    "@types/node": "^10.12.14",
+    "@types/semver": "^5.5.0",
+    "autoprefixer": "^9.4.2",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.0.0",
     "file-loader": "^2.0.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.10",
+    "fork-ts-checker-webpack-plugin": "^0.5.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.9.4",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "ts-loader": "^5.2.2",
+    "ts-loader": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.5.21",
     "webextension-polyfill": "^0.3.1",
-    "webpack": "^4.21.0",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
