--- a/package.json
+++ b/package.json
@@ -37,25 +37,26 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/lodash": "^4.14.119",
     "@types/luxon": "^1.4.1",
-    "@types/node": "^10.12.14",
+    "@types/node": "^10.12.15",
     "@types/semver": "^5.5.0",
     "autoprefixer": "^9.4.2",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.0.1",
     "file-loader": "^2.0.0",
-    "fork-ts-checker-webpack-plugin": "^0.5.1",
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^1.1.0",
     "ts-loader": "^5.3.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
@@ -66,7 +67,7 @@
   "scripts": {
     "test": "web-ext run",
     "build": "webpack",
-    "build:prod": "webpack --mode=production"
+    "build:prod": "cross-env NODE_OPTIONS=--max_old_space_size=4096 webpack --mode=production"
   },
   "author": "MichaelFedora",
   "license": "MPL-2.0"
