--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "main": "blockstack-background.js",
   "private": true,
   "dependencies": {
-    "@mdi/font": "^3.2.89",
+    "@mdi/font": "^3.3.92",
     "axios": "^0.18.0",
     "bip32": "^1.0.2",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.2",
-    "blockstack": "^18.1.0",
+    "blockstack": "^18.2.0",
     "buefy": "^0.7.1",
     "bulma": "^0.7.2",
     "clipboard-copy": "^2.0.1",
     "hash-handler": "^2.0.1",
-    "jsontokens": "^0.8.0",
+    "jsontokens": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.8.2",
+    "luxon": "^1.9.0",
     "qrcode-lite": "^1.2.2",
     "semver": "^5.6.0",
-    "vee-validate": "^2.1.4",
+    "vee-validate": "^2.1.5",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "webextension-polyfill-ts": "^0.8.9",
-    "zone-file": "^0.2.3"
+    "zone-file": "^1.0.0"
   },
   "devDependencies": {
     "@types/bip39": "^2.4.1",
@@ -37,32 +37,32 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/lodash": "^4.14.119",
     "@types/luxon": "^1.4.1",
-    "@types/node": "^10.12.15",
+    "@types/node": "^10.12.18",
     "@types/semver": "^5.5.0",
-    "autoprefixer": "^9.4.2",
+    "autoprefixer": "^9.4.4",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.0.1",
-    "file-loader": "^2.0.0",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.1.0",
-    "ts-loader": "^5.3.1",
+    "terser-webpack-plugin": "^1.2.1",
+    "ts-loader": "^5.3.3",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.0",
     "typescript": "^2.9.2",
-    "vue-loader": "^15.4.2",
+    "vue-loader": "^15.5.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.21",
     "webextension-polyfill": "^0.3.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.2.1"
   },
   "scripts": {
     "test": "web-ext run",
