--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "(Unofficial) Blockstack Extension",
   "short_name": "uBlockstack",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "author": "Michael Fedora",
   "homepage_url": "https://github.com/michaelfedora/unofficial-blockstack-extension",
 
@@ -33,6 +33,7 @@
     "*://browser.blockstack.org/*",
     "*://blockstack.org/*",
     "*://localhost/",
+    "<all_urls>",
     "tabs"
   ],
   "omnibox": {
